--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="description"
+			content="Confess your feelings to any 'hidden' crush instantly without revealing your identity. Please note that this product is meant for fun, and we do not take any responsibility of any kind."
+		/>
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		%sveltekit.head%
+	</head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="description"
-    content="Confess your feelings to any 'hidden' crush instantly without revealing your identity. Please note that this product is meant for fun, and we do not take any responsibility of any kind." />
-  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  %sveltekit.head%
-</head>
-
-<body>
-  <div>%sveltekit.body%</div>
-</body>
-
+	<body>
+		<div>%sveltekit.body%</div>
+	</body>
 </html>
